--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "19.1.0",
     "react-cookie-consent": "^9.0.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^3.4.10",
     "yet-another-react-lightbox": "^3.14.0"
   }
