--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.16",
+    "emailjs-com": "^3.2.0",
     "eslint": "^8.50.0",
     "eslint-config-next": "15.2.4",
     "motion": "^11.14.4",
