--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "emailjs-com": "^3.2.0",
     "eslint": "^8.50.0",
     "eslint-config-next": "15.2.4",
+    "lucide-react": "^0.546.0",
     "motion": "^11.14.4",
     "next": "^15.5.2",
     "postcss": "^8.4.31",
