--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.546.0",
     "motion": "^11.14.4",
     "next": "^15.5.2",
+    "next-sitemap": "^4.2.3",
     "postcss": "^8.4.31",
     "react": "19.1.0",
     "react-cookie-consent": "^9.0.0",
